<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="finalMessageFragment"
            type="com.example.shattered.finalmessage.FinalMessageFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        tools:context=".finalmessage.FinalMessageFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/teal_rectangle"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/level_header_final"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Level 1"/>

            <LinearLayout
                android:id="@+id/score_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/star_layout"
                app:layout_constraintTop_toBottomOf="@id/level_header_final" >

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="30sp"
                    android:text="@string/score"/>

                <TextView
                    android:id="@+id/score_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teal_200"
                    android:textSize="30sp"
                    android:layout_marginStart="8dp"
                    tools:text="60" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/star_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

                <ImageView
                        android:id="@+id/first_star_final"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/on_star_48dp"
                        android:scaleType="center"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="4dp"
                        android:contentDescription="@string/first_star" />

                <ImageView
                        android:id="@+id/second_star_final"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/on_star_48dp"
                        android:scaleType="center"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/second_star" />

                <ImageView
                        android:id="@+id/third_star_final"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/off_star_48dp"
                        android:scaleType="center"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/third_star" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/close_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close"
            app:srcCompat="@drawable/red_circle_with_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/return_to_main_screen"
            app:srcCompat="@drawable/red_circle_with_home_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/to_next_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/go_to_next_level"
            app:srcCompat="@drawable/red_circle_with_forward_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/try_again"
            app:srcCompat="@drawable/red_circle_with_refresh_arrow"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>