<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="helpFragment"
            type="com.example.shattered.game.HelpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            tools:context=".game.HelpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/teal_rectangle"
                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/help_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:text="@string/guide"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/correct_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/help_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/column_divider"
                app:layout_constraintBottom_toTopOf="@id/two_or_zero_selected"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/game_piece_black"
                    android:contentDescription="@string/correct_answer"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/correct_answer"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/two_or_zero_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/correct_answer"
                    app:layout_constraintStart_toStartOf="@id/correct_answer"
                    app:layout_constraintBottom_toTopOf="@id/three_selected">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/game_piece_blue"
                        android:contentDescription="@string/left_pointing_game_piece" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/game_piece_red"
                        android:contentDescription="@string/right_pointing_game_piece" />

                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/go_back_a_row_or_not"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/three_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/two_or_zero_selected"
                    app:layout_constraintStart_toStartOf="@id/correct_answer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:id="@+id/death_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/deathnoteblue_infinite"
                        android:contentDescription="@string/correct_answer"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="@string/back_to_go_it_s_like_dying"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp" />

            </LinearLayout>

            <View
                android:id="@+id/column_divider"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_header"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <LinearLayout
                    android:id="@+id/answer_to_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="@id/correct_answer"
                    app:layout_constraintStart_toStartOf="@id/column_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/forward_arrow_blue"
                        android:contentDescription="@string/correct_answer"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:maxLines="2"
                        android:text="@string/answer_to_the_right"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/answer_to_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/answer_to_right"
                    app:layout_constraintStart_toStartOf="@id/answer_to_right"
                    tools:ignore="UseCompoundDrawables">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/backward_arrow_red"
                        android:contentDescription="@string/correct_answer"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer_to_the_left"
                        android:textColor="@android:color/holo_red_dark"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
                android:id="@+id/close_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/close"
                app:srcCompat="@drawable/red_circle_with_x"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/read_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play_this_level"
                app:srcCompat="@drawable/red_circle_with_forward_arrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>