<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/leaderboard_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/very_dark_gray"
        android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

        <ImageView
                android:id="@+id/first_star_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_marginTop="2dp"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/first_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/second_star_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/second_star"
                app:layout_constraintStart_toEndOf="@id/first_star_leaderboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/third_star_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:layout_marginTop="2dp"
                android:contentDescription="@string/third_star"
                app:layout_constraintStart_toEndOf="@id/second_star_leaderboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/username_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:layout_marginStart="2dp"
                app:layout_constraintStart_toEndOf="@id/third_star_leaderboard"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="Ubertrombone" />

        <TextView
                android:id="@+id/score_value_leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teal_200"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="60" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>